--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,6 @@
 fastapi==0.121.3
 uvicorn[standard]==0.38.0
 python-dotenv==1.0.0
+pydantic==2.12.0
+pydantic-ai-slim[openai,bedrock]==1.0.17
+jinja2==3.1.6
