--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.121.3
+fastapi==0.122.0
 uvicorn[standard]==0.38.0
 python-dotenv==1.0.0
 pydantic==2.12.0
@@ -6,3 +6,4 @@ pydantic-ai-slim[openai,bedrock]==1.0.17
 jinja2==3.1.6
 hydra-core==1.3.2
 opencv-python-headless==4.12.0.88
+structlog==25.5.0
