--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.122.0
 uvicorn[standard]==0.38.0
 python-dotenv==1.0.0
 pydantic==2.12.0
-pydantic-ai-slim[openai,bedrock]==1.0.17
+pydantic-ai-slim[bedrock,google]==1.0.17
 jinja2==3.1.6
 hydra-core==1.3.2
 opencv-python-headless==4.12.0.88
