✨ BACKEND: add cluster descriptors

--- a/backend/config/agents/production.yaml
+++ b/backend/config/agents/production.yaml
@@ -4,6 +4,11 @@ descriptor:
   llm:
     _target_: pydantic_ai.models.google.GoogleModel
     model_name: gemini-3-pro-preview
+clusterer:
+  _target_: agents.clusterer.Clusterer
+  llm:
+    _target_: pydantic_ai.models.bedrock.BedrockConverseModel
+    model_name: global.anthropic.claude-opus-4-5-20251101-v1:0
 visualizer:
   _target_: agents.visualizer.Visualizer
   llm:
