--- a/backend/config/agents/develop.yaml
+++ b/backend/config/agents/develop.yaml
@@ -4,6 +4,11 @@ descriptor:
   llm:
     _target_: pydantic_ai.models.bedrock.BedrockConverseModel
     model_name: global.anthropic.claude-haiku-4-5-20251001-v1:0
+clusterer:
+  _target_: agents.clusterer.Clusterer
+  llm:
+    _target_: pydantic_ai.models.bedrock.BedrockConverseModel
+    model_name: global.anthropic.claude-haiku-4-5-20251001-v1:0
 visualizer:
   _target_: agents.visualizer.Visualizer
   llm:
